--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@ body {
   height: 100vh;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 2rem;
 }
 
 button {
