shrink hands to account for computer side

--- a/style.css
+++ b/style.css
@@ -66,9 +66,10 @@ button {
   animation: 0.1s ease-in-out 0s shake
 }
 
-.human.hand {
-  width: 250px;
-  box-shadow: rgba(1, 1, 1, 0.3) 5px 5px 10px 5px;
+.hand {
+  width: 150px;
+  /* box-shadow: rgba(1, 1, 1, 0.3) 5px 5px 10px 5px; */
+}
 }
 
 
