--- a/style.css
+++ b/style.css
@@ -104,3 +104,10 @@ button {
   font-size: 1.5rem;
   margin-bottom: 2rem;
 }
+.stats.human {
+  margin-left: 1rem
+}
+
+.stats.computer {
+  margin-right: 1rem;
+}
