--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   height: 100vh;
 
   display: flex;
+  color: #f7b538;  
+}
+
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
