--- a/style.css
+++ b/style.css
@@ -46,9 +46,19 @@ main {
   font-size: 1.5rem;
   flex: 0 0 0;
 }
+
 .sidebar hr {
   border-color: #c32f27;
 }
+
+.rounds-input {
+  width: 100px;
+  border-radius: 10px;
+  border: none;
+  padding: 0 0 0 5px;
+  text-align: center;
+}
+
 }
 
 button {
