--- a/style.css
+++ b/style.css
@@ -28,6 +28,18 @@ main {
   flex: 1 1 0;
 }
 
+button.reset {
+  background:#f7b538;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+  color: #780116;
+  cursor: pointer;
+
+  margin-top: 1rem;
+}
+
+
 .sidebar {
   height: 100vh;
   background-color: #780116;
